force-app/main/default/objects/Vendor_Product__c/Vendor_Product__c.object-meta.xml
<CustomObject>
    <label>Vendor Product</label>
    <nameField>
        <label>Vendor Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>