force-app/main/default/objects/Vendor_Product__c/fields/Base_Cost_Per_Vendor_Unit__c.field-meta.xml
<CustomField>
    <fullName>Base_Cost_Per_Vendor_Unit__c</fullName>
    <description>Standard cost per vendor unit, before BU-specific contracts.</description>
    <label>Base Cost Per Vendor Unit</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>