force-app/main/default/objects/Vendor_Product__c/fields/Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Factor__c</fullName>
    <description>Number of internal base units per one vendor unit (e.g. 5 for a 5-gallon pail).</description>
    <label>Conversion Factor</label>
    <precision>16</precision>
    <scale>6</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>