force-app/main/default/objects/Vendor_Product__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>Date from which this vendor product configuration is effective.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>