force-app/main/default/objects/Vendor_Product__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>Date until which this vendor product configuration is effective.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>