force-app/main/default/objects/Vendor_Product__c/fields/External_Catalog_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Catalog_URL__c</fullName>
    <description>Link to vendor&apos;s online catalog page for this item.</description>
    <label>External Catalog URL</label>
    <type>Url</type>
</CustomField>