force-app/main/default/objects/Vendor_Product__c/fields/Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Is_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is a preferred vendor product globally.</description>
    <label>Is Preferred</label>
    <type>Checkbox</type>
</CustomField>