force-app/main/default/objects/Vendor_Product__c/fields/Min_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Order_Quantity__c</fullName>
    <description>Minimum vendor units per order.</description>
    <label>Min Order Quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>