force-app/main/default/objects/Vendor_Product__c/fields/Vendor_Description__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Description__c</fullName>
    <description>Description as used in vendor catalog.</description>
    <label>Vendor Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>