force-app/main/default/objects/Vendor_Product__c/fields/Vendor_SKU__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SKU__c</fullName>
    <description>Vendor SKU or part number.</description>
    <label>Vendor SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>