force-app/main/default/objects/Vendor_Product__c/fields/Vendor_UOM__c.field-meta.xml
<CustomField>
    <fullName>Vendor_UOM__c</fullName>
    <label>Vendor Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>