force-app/main/default/objects/Vendor_Product__c/validationRules/Base_Cost_Per_Vendor_Unit_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Cost_Per_Vendor_Unit_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Base_Cost_Per_Vendor_Unit__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Base_Cost_Per_Vendor_Unit__c</errorDisplayField>
    <errorMessage>Value must be greater than or equal to 0.</errorMessage>
</ValidationRule>