force-app/main/default/objects/Vendor_Product__c/validationRules/Conversion_Factor_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Conversion_Factor_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Conversion_Factor__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Conversion_Factor__c</errorDisplayField>
    <errorMessage>Value must be greater than 0.</errorMessage>
</ValidationRule>