force-app/main/default/objects/Vendor_Product__c/validationRules/Effective_To_greater_than_Effective_From.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_To_greater_than_Effective_From</fullName>
    <active>true</active>
    <errorConditionFormula>Effective_To__c  &lt;  Effective_From__c</errorConditionFormula>
    <errorDisplayField>Effective_To__c</errorDisplayField>
    <errorMessage>Date must be later than or equal to Effective From.</errorMessage>
</ValidationRule>