force-app/main/default/objects/Vendor_Product__c/validationRules/Lead_Time_Days_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Time_Days_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Lead_Time_Days__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Lead_Time_Days__c</errorDisplayField>
    <errorMessage>Value must be greater than or equal to 0.</errorMessage>
</ValidationRule>