force-app/main/default/objects/Vendor_Product__c/validationRules/Min_Order_Quantity_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Order_Quantity_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Order_Quantity__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Min_Order_Quantity__c</errorDisplayField>
    <errorMessage>Value must be greater than or equal to 0.</errorMessage>
</ValidationRule>